# minimal-rust-python-test

./: .gitignore  Cargo.toml  README.md  minimal_rust_python.pyi  pyproject.toml  tox.ini
.github/workflows/: ci-cd.yml
src/: lib.rs
tests/: test_basic.py
